# pool-patrol

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
.cursor/: INTERVIEW_PROMPT.md
apps/api/pool_patrol_api/: __init__.py  dependencies.py  main.py
apps/api/pool_patrol_api/routers/: __init__.py  cases.py  emails.py  employees.py  vanpools.py
apps/api/pool_patrol_api/services/: __init__.py  data_service.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dev/create/: actions.ts  page.tsx
apps/web/src/app/dev/delete/: actions.ts  page.tsx
apps/web/src/app/dev/messages/: actions.ts  page.tsx
apps/web/src/app/employees/[id]/: page.tsx
apps/web/src/components/: AuditButton.tsx  CancelVanpoolButton.tsx  CaseCard.tsx  CreateVanpoolForm.tsx  DeleteVanpoolForm.tsx  DraftMessageEditor.tsx  EmployeeCard.tsx  MessageThreadForm.tsx  ShiftTable.tsx  StatusBadge.tsx  VanpoolCard.tsx  VanpoolMap.tsx  VanpoolMapClient.tsx  index.ts
apps/web/src/database/: db.ts
docs/: AGENT_DESIGN.md  DATABASE.md  TECHNICAL_DESIGN.md
mock/: cases.json  email_threads.json  employees.json  shifts.json  vanpools.json
prisma/: schema.prisma  seed.ts
prisma/migrations/20260126082002_init/: migration.sql
scripts/: run_api.sh  seed_database.py  test_roster_tool.py  test_shift_specialist.py
tests/: test_case_manager.py  test_case_manager_tools.py  test_outreach_agent.py  test_outreach_tools.py  test_resend.py  test_roster_tool.py  test_shift_specialist.py
(+2 files in other folders)
